Some German application translations

--- a/po/de.po
+++ b/po/de.po
@@ -1,12 +1,12 @@
 # German translation for LinkChecker.
-# Bastian Kleineidam <calvin@users.sourceforge.net>, 2009-2011.
+# Bastian Kleineidam <calvin@users.sourceforge.net>, 2009-2022.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: LinkChecker\n"
 "Report-Msgid-Bugs-To: https://github.com/linkchecker/linkchecker\n"
 "POT-Creation-Date: 2022-10-31 19:45+0000\n"
-"PO-Revision-Date: 2020-06-19 16:42+0100\n"
+"PO-Revision-Date: 2022-11-01 19:25+0000\n"
 "Last-Translator: Bastian Kleineidam <calvin@users.sourceforge.net>\n"
 "Language-Team: de <de@li.org>\n"
 "Language: de\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Gtranslator 3.36.0\n"
+"X-Generator: Gtranslator 40.0\n"
 
 #: ../linkcheck/director/console.py:38
 #, fuzzy, python-format
@@ -31,11 +31,11 @@ msgstr[0] "%5d URL zu prüfen"
 msgstr[1] "%5d URLs zu prüfen"
 
 #: ../linkcheck/director/console.py:42
-#, fuzzy, python-format
+#, python-format
 msgid "%4d link"
 msgid_plural "%4d links"
-msgstr[0] "geprüfte Verknüpfung"
-msgstr[1] "geprüfte Verknüpfung"
+msgstr[0] "%4d Verknüpfung"
+msgstr[1] "%4d Verknüpfungen"
 
 #: ../linkcheck/director/console.py:44
 #, python-format
@@ -225,9 +225,9 @@ msgid "Effective URL %(url)r."
 msgstr "Effektive URL %(url)r."
 
 #: ../linkcheck/checker/urlbase.py:442
-#, fuzzy, python-format
+#, python-format
 msgid "URL length %(len)d is longer than %(max)d."
-msgstr "URL-Länge %(len)d ist länger als %(warn)d."
+msgstr "URL-Länge %(len)d ist länger als %(max)d."
 
 #: ../linkcheck/checker/urlbase.py:492 ../linkcheck/checker/urlbase.py:498
 #, python-format
@@ -258,9 +258,9 @@ msgid "could not get content: %(msg)s"
 msgstr "konnte Inhalt nicht lesen: %(msg)s"
 
 #: ../linkcheck/checker/urlbase.py:644
-#, fuzzy, python-format
+#, python-format
 msgid "Content size %(size)s is larger than %(maxbytes)s."
-msgstr "Inhalt %(dlsize)s is größer als %(maxbytes)s."
+msgstr "Inhalt %(size)s is größer als %(maxbytes)s."
 
 #: ../linkcheck/checker/urlbase.py:738
 msgid "Content size is zero."
@@ -285,9 +285,8 @@ msgid "%(scheme)s URL ignored."
 msgstr "%(scheme)s URL ignoriert."
 
 #: ../linkcheck/checker/unknownurl.py:34
-#, fuzzy
 msgid "ignored"
-msgstr "%s URL ignoriert."
+msgstr "ignoriert"
 
 #: ../linkcheck/checker/unknownurl.py:36
 msgid "URL is unrecognized or has invalid syntax"
@@ -601,9 +600,9 @@ msgid "Invalid SSL certificate \"notAfter\" value %r"
 msgstr "ungültiger \"notAfter\" Zertifikatwert %r"
 
 #: ../linkcheck/plugins/sslcertcheck.py:94
-#, fuzzy, python-format
+#, python-format
 msgid "SSL certificate is expired on %(expire)s."
-msgstr "Zertifikat ist am %s abgelaufen"
+msgstr "Zertifikat ist am %(expire)s abgelaufen"
 
 #: ../linkcheck/plugins/sslcertcheck.py:100
 #, python-format
@@ -662,10 +661,9 @@ msgstr ""
 "%(w3type)s Validierungsfehler in Zeile %(line)s Spalte %(column)s: %(msg)s"
 
 #: ../linkcheck/plugins/syntaxchecks.py:136
-#, fuzzy, python-format
+#, python-format
 msgid "%(w3type)s validation error at line %(line)s: %(msg)s"
-msgstr ""
-"%(w3type)s Validierungsfehler in Zeile %(line)s Spalte %(column)s: %(msg)s"
+msgstr "%(w3type)s Validierungsfehler in Zeile %(line)s: %(msg)s"
 
 #: ../linkcheck/plugins/viruscheck.py:101
 msgid "clamd is not ready for stream scanning"
@@ -688,9 +686,9 @@ msgid "Could not connect to ClamAV daemon."
 msgstr "Konnte nicht zu ClamAV verbinden."
 
 #: ../linkcheck/plugins/locationinfo.py:47
-#, fuzzy, python-format
+#, python-format
 msgid "URL is located in %(location)s."
-msgstr "URL befindet sich in %(country)s."
+msgstr "URL befindet sich in %(location)s."
 
 #: ../linkcheck/cache/robots_txt.py:77
 #, python-format
@@ -733,7 +731,6 @@ msgstr ""
 "  unbedingt derselbe wie der des Benutzers sein.\n"
 
 #: ../linkcheck/command/arg_parser.py:46
-#, fuzzy
 msgid ""
 "PROXY SUPPORT\n"
 "To use a proxy on Unix or Windows set $http_proxy or $https_proxy\n"
@@ -759,16 +756,16 @@ msgid ""
 "\n"
 msgstr ""
 "PROXY-UNTERSTÜTZUNG\n"
-"Um einen Proxy unter Unix oder Windows zu benutzen, setzen Sie $http_proxy, "
-"$https_proxy oder $ftp_proxy\n"
-"auf die Proxy URL. Die URL sollte die Form \"<http://>[<user>:"
-"<pass>@]<host>[:<port>]\"\n"
+"Um einen Proxy unter Unix oder Windows zu benutzen, setzen Sie $http_proxy "
+"oder $https_proxy\n"
+"auf die Proxy URL. Die URL sollte die Form \"http://[<user>:<pass>@]<host>[:"
+"<port>]\"\n"
 "besitzen.\n"
 "LinkChecker erkennt auch die Proxy-Einstellungen des Internet Explorers auf "
 "einem\n"
 "Windows-System. Auf einem Mac benutzen Sie die Internet Konfiguration.\n"
 "\n"
-"LinkChecker beachtet die Umgebungsvariable$no_proxy. Diese kann eine Liste "
+"LinkChecker beachtet die Umgebungsvariable $no_proxy. Diese kann eine Liste "
 "von\n"
 "Domänennamen beinhalten, für die kein Proxy benutzt wird.\n"
 "\n"
@@ -786,7 +783,6 @@ msgstr ""
 "\n"
 
 #: ../linkcheck/command/arg_parser.py:72
-#, fuzzy
 msgid ""
 "REGULAR EXPRESSIONS\n"
 "Only Python regular expressions are accepted by LinkChecker.\n"
@@ -798,7 +794,7 @@ msgid ""
 msgstr ""
 "REGULÄRE AUSDRÜCKE\n"
 "Lediglich Pythons reguläre Ausdrücke werden von LinkChecker akzeptiert.\n"
-"Siehe http://www.amk.ca/python/howto/regex/ für eine Einführung in\n"
+"Siehe https://docs.python.org/howto/regex.html für eine Einführung in\n"
 "reguläre Ausdrücke.\n"
 "\n"
 "Die einzige Hinzufügung ist, dass ein regulärer Ausdruck negiert wird\n"
@@ -929,7 +925,6 @@ msgstr ""
 "  linkchecker -r0 ftp.example.org\n"
 
 #: ../linkcheck/command/arg_parser.py:148
-#, fuzzy
 msgid ""
 "OUTPUT TYPES\n"
 "Note that by default only errors and warnings are logged.\n"
@@ -960,7 +955,7 @@ msgstr ""
 "Beachten Sie, dass normalerweise nur Fehler und Warnungen ausgegeben "
 "werden.\n"
 "Sie sollten die Option --verbose benutzen, um gültige URLs zu sehen,\n"
-"und --complete wenn Sie ein Graphformat ausgeben lassen.\n"
+"und wenn Sie ein Graphformat ausgeben lassen.\n"
 "\n"
 "text    Standard Textausgabe in \"Schlüssel: Wert\"-Form.\n"
 "html    Gebe URLs in \"Schlüssel: Wert\"-Form als HTML formatiert aus.\n"
@@ -978,9 +973,9 @@ msgstr ""
 "Beispielskript,\n"
 "        um die initiale SQL Tabelle zu erstellen ist unter create.sql zu "
 "finden.\n"
-"blacklist\n"
-"        Für Cronjobs geeignet. Gibt das Prüfergebnis in eine Datei ~/."
-"linkchecker/blacklist aus,\n"
+"failures\n"
+"        Für Cronjobs geeignet. Gibt das Prüfergebnis in eine Datei "
+"$XDG_DATA_HOME/linkchecker/failures aus,\n"
 "        welche nur Einträge mit fehlerhaften URLs und die Anzahl der "
 "Fehlversuche\n"
 "        enthält.\n"
@@ -1002,15 +997,15 @@ msgid "General options"
 msgstr "Allgemeine Optionen"
 
 #: ../linkcheck/command/arg_parser.py:221
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Use FILENAME as configuration file. Per default LinkChecker uses\n"
 "$XDG_CONFIG_HOME/linkchecker/linkcheckerrc (under Windows\n"
 "%%HOMEPATH%%\\.config\\linkchecker\\linkcheckerrc)."
 msgstr ""
 "Benutze FILENAME als Konfigurationsdatei. Standardmäßig benutzt\n"
-" LinkChecker ~/.linkchecker/linkcheckerrc\n"
-"(unter Windows %HOMEPATH%\\.linkchecker\\linkcheckerrc)."
+" LinkChecker $XDG_CONFIG_HOME/linkchecker/linkcheckerrc\n"
+"(unter Windows %%HOMEPATH%%\\.config\\linkchecker\\linkcheckerrc)."
 
 #: ../linkcheck/command/arg_parser.py:232
 msgid ""
@@ -1061,7 +1056,7 @@ msgstr ""
 "Für exakte Resultate wird Threading während Debugläufen deaktiviert."
 
 #: ../linkcheck/command/arg_parser.py:276
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Output to a file linkchecker-out.TYPE, $XDG_DATA_HOME/linkchecker/failures "
 "for\n"
@@ -1078,12 +1073,12 @@ msgid ""
 "suppress all console output with the option '-o none'."
 msgstr ""
 "Ausgabe in eine Datei namens linkchecker-out.TYPE,\n"
-"$HOME/.linkchecker/blacklist\n"
-"bei 'blacklist' Ausgabe, oder FILENAME falls angegeben.\n"
+"$XDG_DATA_HOME/linkchecker/failures\n"
+"bei 'failures' Ausgabe, oder FILENAME falls angegeben.\n"
 "Das ENCODING gibt die Ausgabeenkodierung an, der Standard ist die\n"
 "Enkodierung der ausgewählten Spracheinstellung.\n"
-"Gültige Enkodierungen sind unter http://docs.python.org/lib/standard-"
-"encodings.html aufgeführt.\n"
+"Gültige Enkodierungen sind unter https://docs.python.org/library/codecs."
+"html#standard-encodings aufgeführt.\n"
 "Der FILENAME und ENCODING Teil wird bei dem Ausgabetyp 'none' ignoriert,\n"
 "ansonsten wird die Datei überschreiben falls sie existiert.\n"
 "Sie können diese Option mehr als einmal verwenden. Gültige\n"
@@ -1100,7 +1095,7 @@ msgid "Don't log warnings. Default is to log warnings."
 msgstr "Gebe keine Warnungen aus. Standard ist die Ausgabe von Warnungen."
 
 #: ../linkcheck/command/arg_parser.py:310
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Specify output as %(loggertypes)s. Default output type is text.\n"
 "The ENCODING specifies the output encoding, the default is that of your\n"
@@ -1111,8 +1106,8 @@ msgstr ""
 "Spezifiziere die Ausgabe als %(loggertypes)s. Standardausgabe ist text. Das "
 "ENCODING gibt die Ausgabeenkodierung an, der Standard ist die\n"
 "Enkodierung der ausgewählten Spracheinstellung.\n"
-"Gültige Enkodierungen sind unter http://docs.python.org/lib/standard-"
-"encodings.html aufgeführt."
+"Gültige Enkodierungen sind unter https://docs.python.org/library/codecs."
+"html#standard-encodings aufgeführt."
 
 #: ../linkcheck/command/arg_parser.py:327
 msgid ""
@@ -1256,12 +1251,11 @@ msgid "Canceled."
 msgstr "Abgebrochen."
 
 #: ../linkcheck/command/linkchecker.py:196
-#, fuzzy
 msgid ""
 "The `yappi' Python module is not installed, therefore the --profile option "
 "is disabled."
 msgstr ""
-"Das `cProfile' Python Modul ist nicht installiert, deshalb ist die --profile "
+"Das `yappi' Python Modul ist nicht installiert, deshalb ist die --profile "
 "Option deaktiviert."
 
 #: ../linkcheck/command/linkchecker.py:215
@@ -1547,11 +1541,11 @@ msgid "That's it."
 msgstr "Das war's."
 
 #: ../linkcheck/logger/text.py:227
-#, fuzzy, python-format
+#, python-format
 msgid "%d link"
 msgid_plural "%d links"
-msgstr[0] "geprüfte Verknüpfung"
-msgstr[1] "geprüfte Verknüpfung"
+msgstr[0] "%d Verknüpfung"
+msgstr[1] "%d Verknüpfungen"
 
 #: ../linkcheck/logger/text.py:231
 #, fuzzy, python-format
@@ -1561,9 +1555,8 @@ msgstr[0] "Gültige URLs"
 msgstr[1] "Gültige URLs"
 
 #: ../linkcheck/logger/text.py:233
-#, fuzzy
 msgid " checked."
-msgstr "%d Verknüpfung überprüft."
+msgstr " überprüft."
 
 #: ../linkcheck/logger/text.py:235 ../linkcheck/logger/html.py:357
 #, python-format
@@ -1607,9 +1600,9 @@ msgid "Statistics:"
 msgstr "Statistik:"
 
 #: ../linkcheck/logger/text.py:290
-#, fuzzy, python-format
+#, python-format
 msgid "Downloaded: %s."
-msgstr "Heruntergeladen: %s"
+msgstr "Heruntergeladen: %s."
 
 #: ../linkcheck/logger/text.py:295 ../linkcheck/logger/html.py:327
 #, python-format
@@ -1751,7 +1744,7 @@ msgid "invalid %s option %r"
 msgstr "ungültige %s Option %r"
 
 #: ../linkcheck/lc_cgi.py:265
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "<!DOCTYPE HTML>\n"
 "<html><head>\n"
@@ -1770,6 +1763,7 @@ msgid ""
 "</body>\n"
 "</html>"
 msgstr ""
+"<!DOCTYPE HTML>\n"
 "<html><head>\n"
 "<meta http-equiv=\"Content-Type\" content=\"text/html; "
 "charset=ISO-8859-1\">\n"
