--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: LinkChecker\n"
 "Report-Msgid-Bugs-To: https://github.com/linkchecker/linkchecker\n"
 "POT-Creation-Date: 2022-10-31 19:45+0000\n"
-"PO-Revision-Date: 2022-11-17 14:20+0100\n"
+"PO-Revision-Date: 2022-11-19 14:59+0100\n"
 "Last-Translator: Gideon van Melle <translations@gvmelle.com>\n"
 "Language-Team: \n"
 "Language: nl_NL\n"
@@ -946,7 +946,7 @@ msgstr ""
 "U moet de optie --verbose gebruiken om geldige URL's te zien,\n"
 "en bij het uitvoeren van een sitemapgrafiek.\n"
 "\n"
-"tekst    Standaard tekstuitvoer, Logt URL's in trefwoord: argumentmode.\n"
+"text    Standaard tekstuitvoer, Logt URL's in trefwoord: argumentmode.\n"
 "html    logt URL's in trefwoord: argumentmode, opgemaakt als HTML.\n"
 "        Geeft ook links naar gerefereerde pagina’s. Ongeldige URL's hebben\n"
 "        HTML- en CSS-syntax controle links toegevoegd.\n"
@@ -962,7 +962,7 @@ msgstr ""
 "Een voorbeeld\n"
 "        script om de eerste SQL-tabel te maken, is opgenomen als create."
 "sql.\n"
-"fouten\n"
+"failures\n"
 "        Geschikt voor cron jobs. Geeft het controleresultaat in een "
 "logbestand\n"
 "        $XDG_DATA_HOME/linkchecker/failures die alleen vermeldingen bevat "
@@ -1062,14 +1062,14 @@ msgid ""
 "to more than one file. Default is no file output. Note that you can\n"
 "suppress all console output with the option '-o none'."
 msgstr ""
-"Uitvoer naar een linkchecker-out bestand. TYPE, $XDG_DATA_HOME/linkchecker/"
+"Uitvoer naar een bestand linkchecker-out.TYPE, $XDG_DATA_HOME/linkchecker/"
 "failures voor\n"
-"'fouten' uitvoer of BESTANDSNAAM indien opgegeven.\n"
+"‘Failuren’ uitvoer of FILENAME indien opgegeven.\n"
 "De CODERING specificeert de uitvoercodering, de standaard is die van uw\n"
 "locale.\n"
 "Geldige coderingen worden vermeld op https://docs.python.org/library/codecs."
 "html#standard-encodings.\n"
-"De BESTANDSNAAM- en CODERING onderdelen van het uitvoertype 'geen' worden "
+"De FILENAME- en CODERING onderdelen van het uitvoertype ‘none’ worden "
 "genegeerd,\n"
 "zoniet, als het bestand al bestaat, wordt het overschreven.\n"
 "U kunt deze optie meer dan eens opgeven. Geldige bestandstypen voor "
@@ -1272,8 +1272,8 @@ msgstr "Uitvoeren met python -O schakelt foutopsporing uit."
 #, python-format
 msgid "blacklist is deprecated for option %(option)s, using failures instead"
 msgstr ""
-"zwarte lijst is afgeschaft voor optie %(option)s, inplaats hiervan worden "
-"fouten gebruikt"
+"blacklist is afgeschaft voor optie %(option)s, inplaats hiervan worden "
+"failures gebruikt"
 
 #: ../linkcheck/command/setup_config.py:88
 #: ../linkcheck/command/setup_config.py:134
@@ -1293,7 +1293,7 @@ msgid ""
 "blacklist logger is deprecated for option %(option)s, using failures instead"
 msgstr ""
 "blacklist logger is afgeschaft voor optie %(option)s, inplaats hiervan "
-"worden fouten gebruikt"
+"worden failures gebruikt"
 
 #: ../linkcheck/command/setup_config.py:162
 #, python-format
@@ -1353,7 +1353,7 @@ msgid ""
 "The blacklist section in linkcheckerrc is deprecated, please rename to "
 "failures"
 msgstr ""
-"De zwarte lijst sectie in linkcheckeerrc is afgeschaft. Hernoem naar fouten"
+"De blacklist sectie in linkcheckeerrc is afgeschaft. Hernoem naar failures"
 
 #: ../linkcheck/configuration/confparse.py:235
 #, python-format
@@ -1489,7 +1489,7 @@ msgstr ""
 #: ../linkcheck/logger/failures.py:47
 #, python-format
 msgid "%(blacklist)s file is deprecated please rename to failures"
-msgstr "%(blacklist)s bestand is afgeschaft, hernoem naar fouten"
+msgstr "%(blacklist)s bestand is afgeschaft, hernoem naar failures"
 
 #: ../linkcheck/logger/failures.py:99
 #, python-format
