--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -1065,11 +1065,11 @@ msgstr ""
 "Uitvoer naar een bestand linkchecker-out.TYPE, $XDG_DATA_HOME/linkchecker/"
 "failures voor\n"
 "‘Failuren’ uitvoer of FILENAME indien opgegeven.\n"
-"De CODERING specificeert de uitvoercodering, de standaard is die van uw\n"
+"De ENCODING specificeert de uitvoercodering, de standaard is die van uw\n"
 "locale.\n"
 "Geldige coderingen worden vermeld op https://docs.python.org/library/codecs."
 "html#standard-encodings.\n"
-"De FILENAME- en CODERING onderdelen van het uitvoertype ‘none’ worden "
+"De FILENAME- en ENCODING onderdelen van het uitvoertype ‘none’ worden "
 "genegeerd,\n"
 "zoniet, als het bestand al bestaat, wordt het overschreven.\n"
 "U kunt deze optie meer dan eens opgeven. Geldige bestandstypen voor "
