Update nl_NL.po for AnchorCheck directory warning
f-string replaced in:
b87d26f9 ("Fix translatability of AnchorCheck directory warning", 2022-11-08)

--- a/po/nl_NL.po
+++ b/po/nl_NL.po
@@ -536,12 +536,12 @@ msgstr ""
 "moet het systeempad altijd gebruiken in URL's."
 
 #: ../linkcheck/checker/fileurl.py:360
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "URL `%s' is a directory with an anchor. When checking local files "
 "AnchorCheck does not support anchors for directories."
 msgstr ""
-" URL '{self.url}' is een directory met een anker. Bij het controleren van "
+"URL `%s' is een directory met een anker. Bij het controleren van "
 "lokale bestanden ondersteunt AnchorCheck geen ankers voor mappen."
 
 #: ../linkcheck/checker/ftpurl.py:75
