--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,3 +1,10 @@
+10.2.1 (released 05.12.2022)
+
+Fixes
+- Minimum Beautiful Soup version required restored to 4.8.1
+- Documentation updates
+
+
 10.2.0 (released 21.11.2022)
 
 Features:
