--- a/doc/install.txt
+++ b/doc/install.txt
@@ -104,10 +104,13 @@ First, install the required software.
 8. *Optional, for displaying country codes:*
     GeoIP from https://pypi.org/project/GeoIP/
 
-9. *Optional, used for Virus checking:*
+9. *Optional, for reading PDF files:*
+    pdfminer.six from https://pypi.org/project/pdfminer.six/
+
+10. *Optional, used for Virus checking:*
     ClamAv from https://www.clamav.net/
 
-10. *Optional, to run the WSGI web interface:*
+11. *Optional, to run the WSGI web interface:*
     Apache from https://httpd.apache.org/
     mod_wsgi from https://pypi.org/project/mod-wsgi/
 
